[package]
name = "sprocket"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "3.0", features = ["derive"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
wasm-bindgen = "0.2"